--- a/app/components/timeline/add-event/add-event.component.less
+++ b/app/components/timeline/add-event/add-event.component.less
@@ -5,7 +5,7 @@ add-event {
       margin: 0 0 20px 0;
     }
 
-    input[type="text"] {
+    input[type="text"], input[type="date"], select {
       margin: 10px 0;
     }
   }
