--- a/app/components/timeline/add-event/add-event.component
+++ b/app/components/timeline/add-event/add-event.component
@@ -1,23 +1,45 @@
 // component style
-require('./add-event.component.less')
+import style from './add-event.component.less'
 
 <add-event>
   <form onsubmit={ addEvent }>
     <h3>New Event</h3>
-    <input id="eventTitle" type="text" placeholder="Title" class="form-control" >
-    <input id="eventDescription" type="text" placeholder="Description" class="form-control" >
+    <input id="eventTitle" type="text" placeholder="Title" class="form-control">
+    <input id="eventDescription" type="text" placeholder="Description" class="form-control">
+    <select id="eventCategory" class="form-control">
+      <option value="" selected>select category</option>
+      <option each={ categoryOpts } value="{ value }">{ text }</option>
+    </select>
+    <input id="eventDate" type="date" placeholder="Date" class="form-control">
     <button type="submit" class="btn btn-default"> Add </button>
   </form>
 
   <script>
 
+    this.categoryOpts = [
+      { value: 'PERSONAL_LIFE', text: 'Personal Life' },
+      { value: 'WORK', text: 'Work' },
+      { value: 'MEDICAL', text: 'Medical' },
+      { value: 'FINANCIAL', text: 'Financial' },
+      { value: 'PROFESSIONAL', text: 'Professional' }
+    ]
+
+    this.categoryIconMap = {
+      PERSONAL_LIFE: 'ion-android-happy',
+      WORK: 'ion-briefcase',
+      MEDICAL: 'ion-medkit',
+      FINANCIAL: 'ion-social-usd',
+      PROFESSIONAL: 'ion-university'
+    }
+
     this.addEvent = (e) => {
+      console.log(this.eventCategory);
       this.parent.addEvent({
         title: this.eventTitle.value,
         description: this.eventDescription.value,
-        category: 'PERSONAL_LIFE',
-        icon: 'ring',
-        date: '06/28/2016',
+        category: this.eventCategory.value,
+        icon: this.categoryIconMap[this.eventCategory.value],
+        date: this.eventDate.value || new Date()
       })
       e.target.reset()
     }
