--- a/app/components/app-header/app-header.component.less
+++ b/app/components/app-header/app-header.component.less
@@ -9,8 +9,10 @@ app-header {
     float: right;
     text-align: center;
 
-    &:hover {
-      background: #f5f5f5;
+    &.menu-open {
+      background: #fff;
+      border-left: 1px solid #e0e0e0;
+      border-right: 1px solid #e0e0e0;
     }
 
     i {
