--- a/app/components/common/app-menu/app-menu.component.less
+++ b/app/components/common/app-menu/app-menu.component.less
@@ -16,6 +16,12 @@
     text-align: left;
     padding: 0 20px;
     font-size: 1.5rem;
+    color: #666;
+
+    &:hover {
+      text-decoration: none;
+      color: #337ab7;
+    }
 
     i {
       font-size: 2.2rem !important;
