--- a/app/components/timeline/timeline.component
+++ b/app/components/timeline/timeline.component
@@ -26,7 +26,8 @@ import actions from '../../actions/actions'
     let store = this.opts.store
 
     this.on('mount', () => {
-      store.dispatch(actions.loadTimeline());
+      store.dispatch(actions.loadTimeline())
+      store.dispatch(actions.setActiveNav('timeline'))
     })
 
     store.subscribe(() => {
