--- a/app/components/common/app-menu/app-menu.component
+++ b/app/components/common/app-menu/app-menu.component
@@ -14,11 +14,12 @@ import style from  './app-menu.component.less'
     this.menuItems = [
       { text: 'Profile',  icon: 'ion-android-person', url: 'profile' },
       { text: 'Settings', icon: 'ion-ios-gear',       url: 'settings' },
-      { text: 'Logout',   icon: 'ion-log-out',        url: '' }
+      { text: 'Logout',   icon: 'ion-log-out',        url: 'logout' }
     ]
 
     this.goToPath = (e) => {
       e.stopPropagation()
+      console.log(e.item)
       this.parent.toggleMenu()
       return true
     }
