--- a/app/components/profile/profile.component.less
+++ b/app/components/profile/profile.component.less
@@ -25,6 +25,24 @@
       border: 1px solid #e0e0e0;
       padding: 40px 20px;
       border-radius: 2px;
+      box-shadow: 0px 2px 0px #e0e0e0;
+
+      .row-info {
+        text-align: left;
+        margin-bottom: 20px;
+
+        .key {
+          font-size: 1.8rem;
+          text-transform: capitalize;
+          margin-right: 20px;
+          width: 120px;
+          display: inline-block;
+          color: #666;
+        }
+        .val {
+          font-size: 1.5rem;
+        }
+      }
     }
   }
 }
