--- a/app/components/common/app-menu/app-menu.component.less
+++ b/app/components/common/app-menu/app-menu.component.less
@@ -9,6 +9,7 @@
   box-shadow: 0px 3px 0px #e0e0e0;
   background: #fff;
   border-radius: 0 0 2px 2px;
+  z-index: 1;
 
   a {
     display: inline-block;
