--- a/app/components/timeline/timeline.component
+++ b/app/components/timeline/timeline.component
@@ -2,13 +2,14 @@
 import style from './timeline.component.less'
 
 // child components
-import userTimelineHeader from './user-timeline-header/user-timeline-header.component'
-import timelineEntry from './timeline-entry/timeline-entry.component'
+import userTimelineHeader from './user-timeline-header/user-timeline-header'
+import timelineEntry from './timeline-entry/timeline-entry'
 
 // action dispatchers
 import actions from '../../actions/actions'
 
 <timeline>
+
   <div class="timeline-container">
     <div>
       <user-timeline-header user={ user }></user-timeline-header>
@@ -22,7 +23,6 @@ import actions from '../../actions/actions'
   </div>
 
   <script>
-
     let store = this.opts.store
 
     this.on('mount', () => {
@@ -69,7 +69,6 @@ import actions from '../../actions/actions'
         }
       })
     }
-
   </script>
 
 </timeline>
